fix: remove connection, remain only connections
